--- a/src/layout/site-footer.html
+++ b/src/layout/site-footer.html
@@ -1,3 +1,4 @@
 <footer class="site-footer">
 </footer>
+<script type="text/javascript" src="/scripts/main.js"></script>
 <script src="//localhost:35729/livereload.js"></script>
