--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,8 @@
 :root {
 	--base-bright: #002b36;		--base-bright-hsl: 0, 0%, 95%;
 	--base-light: #839496;		--base-light-hsl: 186, 8%, 55%;
-	--base-dark: #374249 /*#073642*/;		--base-dark-hsl: 203, 14%, 25%;
-	--base-darker: #191919 /*#042029*/;		--base-darker-hsl: 195, 82%, 9%;
+	--base-dark: #374249;		--base-dark-hsl: 203, 14%, 25%;
+	--base-darker: #191919;		--base-darker-hsl: 195, 82%, 9%;
 	--base-yellow: #f1c40e;		--base-yellow-hsl: 48, 89%, 50%;
 	--base-orange: #cb4b16;		--base-orange-hsl: 18, 80%, 44%;
 	--base-red: #dc322f;		--base-red-hsl: 1, 71%, 52%;
